refactor(agent): harden durable run scheduling